--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="" dowload=>Download</a>
+<a href="https://hondoalexandros.github.io/simple_kotlin_app/raw/main/app-debug.apk" dowload=>Download</a>
 
 </body>
 </html>
